Fix job standard out error message word-wrap

--- a/awx/ui/client/src/job-results/job-results-stdout/job-results-stdout.block.less
+++ b/awx/ui/client/src/job-results/job-results-stdout/job-results-stdout.block.less
@@ -165,7 +165,7 @@
     color: @default-interface-txt;
     display: inline-block;
     white-space: pre-wrap;
-    word-break: break-word;
+    word-break: break-all;
     width:100%;
     background-color: @default-secondary-bg;
 }
